deploy/envoy/envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-proxy
  namespace: resilience-lab
  labels:
    app: envoy-proxy
spec:
  type: ClusterIP
  selector:
    app: envoy-proxy
  ports:
    - name: http
      port: 80
      targetPort: 10000
      protocol: TCP
    - name: admin
      port: 9901
      targetPort: 9901
      protocol: TCP
